# Adamv1-clean

./: .gitignore  Dockerfile  LICENSE  Project Index.md  README.md  adam.spec  best_coding_model.txt  build system requires.txt  pyproject.toml  requirements.txt  ruff_check.md  run_adam.py  run_ui.py  test_adam_plugins.sh  test_adapters.py  tree.txt
.mem/: mcp_notes.txt  run_agent.sh
.out/: specs.out
config/: adam.yaml  models.yaml  plugins.sled.yaml  plugins.txt
data/: agent_state.json
docs/: DECISIONS.md
eval/: README.md  director_eval.jsonl  feedback_tags.json  items.jsonl  run.py  tasks.jsonl
logs/: audit.jsonl  hardware_audit.json  wiring_report.txt
packaging/: adam.desktop  adam.spec
plugins/: README.md  agent_coder.py  agent_critic.py  agent_interpreter.py  agent_researcher.py  agent_router.py  agent_tester.py  creative_cortex.py  example_echo.py  group_chat.py  hardware_audit.py  ingest_document.py  local_llm.py  memory_search.py  memory_summarize.py  memory_write.py  mode_registry_web.py  model_registry.py  model_router.py  nsp_supervisor.py  ollama_llm.py  sled_client.py
scripts/: doctor.sh  fix_imports.py  lint.sh  ui_doctor.sh  validate_repo.py
server/: requirements.txt
tests/: README.md  __init__.py  test_first_wave_plugins.py  test_mcp_adapter.py  test_plugins_scaffold.py  test_sled_decode.py
tools/: approval_cmd.py  backup_snapshot.py  deep_diag.py  diag_adam.py  diag_director.py  example_backup.py  git_ops.py  guard_approval.py  model_download.py  model_update.py  proc_app.py  proc_ps.py  registry.json  web_search.py  wmgr.py
(+136 files in other folders)
