[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adam"
version = "0.1.0"
description = "Offline-first AI Assistant"
authors = [{name = "Micheal Emory", email = "mikeemory87@hotmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "PyYAML",
    "httpx",
]

[project.scripts]
adam = "run_adam:main"
